# AS_all

./: README.md
voice_diary/: docker-compose.yml  pyproject.toml
voice_diary/mongodb/: docker-compose.yml
voice_diary/mongodb_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-16919231976685371840.wt  collection-0-486940118699196452.wt  collection-0-8520320837290208562.wt  collection-0-9198364340618577326.wt  collection-2-486940118699196452.wt  collection-2-8520320837290208562.wt  collection-4-8520320837290208562.wt  collection-7-8520320837290208562.wt  index-1-16919231976685371840.wt  index-1-486940118699196452.wt  index-1-8520320837290208562.wt  index-1-9198364340618577326.wt  index-3-486940118699196452.wt  index-3-8520320837290208562.wt  index-5-8520320837290208562.wt  index-6-8520320837290208562.wt  index-8-8520320837290208562.wt  sizeStorer.wt
voice_diary/mongodb_data/diagnostic.data/: metrics.2024-12-17T18-48-51Z-00000  metrics.2024-12-17T18-52-59Z-00000  metrics.2024-12-17T19-01-19Z-00000  metrics.2024-12-17T19-02-12Z-00000  metrics.2024-12-17T19-06-51Z-00000  metrics.2024-12-17T19-13-55Z-00000  metrics.2024-12-17T19-16-53Z-00000  metrics.2024-12-17T19-18-23Z-00000  metrics.2024-12-17T19-19-26Z-00000  metrics.2024-12-17T19-24-06Z-00000  metrics.2024-12-17T19-33-40Z-00000  metrics.2024-12-17T19-35-47Z-00000  metrics.2024-12-17T19-49-45Z-00000  metrics.2024-12-17T19-52-40Z-00000  metrics.2024-12-17T21-10-03Z-00000  metrics.2024-12-17T21-12-13Z-00000  metrics.2024-12-18T15-45-19Z-00000  metrics.2024-12-18T15-49-24Z-00000  metrics.2024-12-19T08-47-09Z-00000  metrics.interim  (+8 more)
(+55 files in other folders)
