[project]
name = "voice-diary"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "atsuya", email = "f.atsuya.personal@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "pymongo>=4.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
