[project]
name = "voice-diary"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "atsuya", email = "f.atsuya.personal@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "google-generativeai>=0.8.4",
    "pymongo>=4.10.1",
    "pyttsx3>=2.98",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_diary"]
